# heatseeker

./: .gitignore  .vercelignore  AGENTS.md  LICENSE  README.md  claude.md  index.html  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
.github/workflows/: run_npm_tests.yaml
docs/computer_use/: chatgpt-5-pro.md  chatgpt-5.md  claude-4_5-api.md  claude-api.md  claude4.md  readme.md
docs/plans/: leaderboard.md  responsive.md
e2e/: accessibility.spec.js  game.spec.js  performance.spec.js  responsive.spec.js
models/: __init__.py
models/claude/: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  config.py  docker-compose.yml  events.py  prompt.py  pyproject.toml  requirements.txt  run.py
models/claude/src/: __init__.py  agent.py  browser.py  main.py
models/claude/tests/: __init__.py  conftest.py  test_agent.py  test_browser.py  test_heatseeker_player.py
public/: index.html  manifest.json
src/: App.jsx  App.tsx  env.d.ts  gameLogic.ts  main.jsx  main.tsx  types.ts
src/components/: LeaderboardModal.tsx  LeaderboardTable.tsx
src/hooks/: useLeaderboard.ts  useViewportSize.ts
src/services/: leaderboard.ts  leaderboardTypes.ts
src/utils/: logger.ts
supabase/: config.toml
supabase/.temp/: pooler-url  project-ref
supabase/functions/: deno.json
supabase/functions/leaderboard/: index.ts
test/: App.responsive.test.tsx  App.test.jsx  App.test.tsx  LeaderboardModal.test.tsx  LeaderboardTable.test.tsx  gameLogic.test.ts  main.test.tsx  useLeaderboard.test.tsx
(+3 files in other folders)
