[project]
name = "heatseeker-claude-computer-use"
version = "0.1.0"
description = "Claude 4.5 Sonnet computer use agent for playing Heatseeker game"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.20.0",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "playwright>=1.40.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
